# loredb

./: ARCHITECTURE.md  Cargo.toml  README.md  loredb.db
src/: lib.rs  main.rs
src/storage/: mod.rs  schema.sql  types.rs
