[package]
name = "loredb"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# UUIDs
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# date and time 
chrono = { version = "0.4.42", features = ["serde"] }

# LLM API
reqwest = { version = "0.12.24", features = ["json"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# Configuration
config = "0.15.19"

# Database 
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }

# CLI (optional)
clap = { version = "4.5.52", features = ["derive"] }
